grid changes for desktop and alignment fixes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="sa-body">
                 <div class="sa-sch">
                     <div class="row">
-                        <div class="col col-sm-4 col-6">
+                        <div class="col-md col-sm-4 col-6">
                             <div class="sa-sch-dtls">
                                 <div class="txt-block">
                                     <span class="txt1">car</span>
@@ -38,7 +38,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col col-sm-4 col-6">
+                        <div class="col-md col-sm-4 col-6">
                             <div class="sa-sch-dtls icon-inr">
                                 <div class="txt-block">
                                     <span class="txt1">9L</span>
@@ -46,7 +46,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col col-sm-4 col-6">
+                        <div class="col-md col-sm-4 col-6">
                             <div class="sa-sch-dtls icon-calender">
                                 <div class="txt-block">
                                     <span class="txt1">June 2032</span>
@@ -54,7 +54,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col col-sm-4 col-6">
+                        <div class="col-md col-sm-4 col-6">
                             <div class="sa-sch-dtls">
                                 <div class="txt-block">
                                     <span class="txt1">SIP</span>
@@ -62,7 +62,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col col-sm-4 col-6">
+                        <div class="col-md col-sm-4 col-6">
                             <div class="sa-sch-dtls icon-rupee">
                                 <div class="txt-block">
                                     <span class="txt1">30000</span>
